# lieutenant-green

./: .buildinfo  .env.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  LICENCE.txt  Makefile  PhD_Gant_Chart_template.R  README.md  app1.code-workspace  app2.code-workspace  app_1.code-workspace  genindex.html  index.html  makefile  notes.html  objects.inv  playbooks_i.code-workspace  pyproject.toml  requirements.dev.txt  requirements.r  requirements.txt  search.html  searchindex.js  shit2.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.doctrees/: environment.pickle  index.doctree  notes.doctree
.doctrees/_api/: lieutenant_green.doctree  modules.doctree
.github/workflows/: build-docker-dev-image.yml  build-docker-dev.yml  build-docker-image.yml  build-docker-prod.yml  build-docker.yml  deploy-github-pages.yml  gh-pages.yml  publish-gh-pages.yml  run-all-tests.yml
BlazorApp/Properties/: launchSettings.json
_api/: lieutenant_green.html  modules.html
_sources/: notes.md.txt
_sources/_api/: lieutenant_green.rst.txt  modules.rst.txt
admin/: config.yml
ansible_i/: makefile  pyproject.toml  requirements.txt
ansible_i/playbooks/: show-flag.yml
app1/: main1.py  makefile  pyproject.toml  requirements.txt
app2/: main2.py  makefile  pyproject.toml  requirements.txt
app_0/: main_0.py
app_1/: makefile  pyproject.toml  requirements.txt
app_2/: README.md  main_2.py  makefile  pyproject.toml  requirements.txt
data/: more_tweets.json  tweets.json
docs/: _config.yaml  conf.py  index.md  notes.md
docs/content/docs/getting-set-up/: _index.md
fast_api/: main.py
models/: person.py
notebooks/: 001_demo.ipynb  connect.ipynb  singleton_db.json  todo_db.json  try_db.ipynb
package/: module1.py  pyproject.toml
package_a/: module_1.py
package_b/: README.md  pyproject.toml
package_b/src/package_b/: module_1.py  module_2.py
package_b/tests/: module_1_tests.py
src/: demo_twitter_api.py  demo_twitter_api_test.py  download_with_twint.py  download_with_twitter_api.py  twitter_api_test.py
src/lieutenant_green/: __init__.py  main.py
tests/: __init__.py  main_test.py
tests/package_a/: module_1_test.py
