[tool.poetry]
name = "lieutenant-green"
version = "0.1.0"
description = "TinyDb testing."
authors = ["Joe J Collins <joejcollins@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://joejcollins.github.io/lieutenant-green/"
repository = "https://github.com/joejcollins/lieutenant-green"
documentation = "https://joejcollins.github.io/lieutenant-green/"
packages = [
    { include = "lieutenant_green", from = "src" }
]

[tool.poetry.dependencies]
ipykernel = "^6.29.5"
python = "^3.11"
requests = "^2.25.1"
TinyDb = "^4.5.1"
numpy = ">=1.19.0,<2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^21.6b0"
isort = "^5.9.1"

[tool.poetry.scripts]
run = "lieutenant_green.main:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

