[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lieutenant_green"
version = "0.1.0"
description = "Click House"
authors = [{ name = "Joe Collins", email = "j.collins@zengenti.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["clickhouse-connect", "clickhouse-driver"]

[project.optional-dependencies]
dev = [
    "black",
    "debugpy",
    "ipykernel",
    "isort",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pytest",
    "ruff",
    "setuptools",
    "sourcery"
]

[project.urls]
homepage = "https://joejcollins.github.io/lieutenant-green"
repository = "https://github.com/joejcollins/lieutenant-green"
documentation = "https://joejcollins.github.io/lieutenant-green"

[project.scripts]
run = "lieutenant_green.main:main"

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --cache-clear"
testpaths = ["./tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
disable_error_code = "import-untyped"
ignore_missing_imports = true
