[project]
name = "lieutenant_green"
version = "0.0.1"
description = "Data Demo"
authors = [{ name = "Joe Collins", email = "joejcollins@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["fsspec"]

[project.optional-dependencies]
dev = [
    "debugpy",
    "ipykernel",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "tensorflow"
]

[project.urls]
homepage = "https://joejcollins.github.io/lieutenant-green"
repository = "https://github.com/joejcollins/lieutenant-green"
documentation = "https://joejcollins.github.io/lieutenant-green"

[project.scripts]
run = "lieutenant_green.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --cache-clear"
testpaths = ["./tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
disable_error_code = "import-untyped"
ignore_missing_imports = true

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I", "PL", "D"]
lint.ignore = ["D203", "D213"]
lint.fixable = ["ALL"]
target-version = "py311"
