[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible_i"
version = "0.0.3"
description = "Ansible playbooks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ansible",
    "pip-tools",  # used to manage requirements.txt.
    "setuptools",
]
