[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "app_1"
version = "0.0.1"
description = "App1 Demonstration"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pip-tools",  # used to manage requirements.txt.
    "setuptools",
    "toml",
]
