[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "app_2"
version = "0.0.2"
description = "App 2 Demonstration"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pip-tools",  # used to manage requirements.txt.
    "setuptools",
    "toml",
]
