[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "package"
version = "0.0.1"
description = "Shared Package"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "UnleashClient",
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
