[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "package_b"
version = "0.0.1"
description = "Shared Separate Package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "UnleashClient",
]

# Find all the packages in the project using automatic discovery (src-layout).
[tool.setuptools.packages.find]
where = ["src"]
